Everything working fine

--- a/styles/fonts.scss
+++ b/styles/fonts.scss
@@ -1,1 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+@font-face {
+    font-family: "Quicksand";
+    src: url("../public/fonts/Quicksand-Bold.ttf");
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+}
