--- a/src/Components/dashboard/BotonCoordinaEstado/BotonCoordinaEstado.scss
+++ b/src/Components/dashboard/BotonCoordinaEstado/BotonCoordinaEstado.scss
@@ -6,7 +6,7 @@
     align-items : center;
     background-color: #D3D3D3;
     width: 100%;
-    height: 8vh;
+    height: 50px;
     border-radius: 47px;
     flex-direction: row;
     
@@ -18,7 +18,7 @@
     align-items : center;
     background-color: #b2b2b2;
     width: 100%;
-    height: 8vh;
+    height: 50px;
     border-radius: 47px;
     flex-direction: row;
 }
